[tool.poetry]
name = "mountain"
version = "0.1.0"
description = ""
authors = ["Steve Avery <git@stevenavery.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.0.6"
numpy = "^1.26.2"
rasterio = "^1.3.9"
gdal = "^3.8.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
